@startuml


class Jugador{
 +construir(vertice:Vertice, construccion:Construccion)
 +robarAR(victima:Jugador)
 +recibirRecurso(recurso:Recurso)
 +entregarRecursoA(ladron:Jugador)
}


class Inventario{
  -recurso:Recurso
  +agregarTodos(listaRecurso: Lis<Recurso>)
  +cantidadDeTipo(tipo:Recurso)
  +quitar(tipo:Recurso):Recurso
  +reducirAlaMitar()
  +estaVacio():boolean
}

abstract Recurso {
    - int cantidad
    + {abstract} clonar():Recurso
    + {abstract} aumentar()
}

class Madera extends Recurso{
    + clonar():Recurso
    + aumentar()
}

class Ladrillo extends Recurso{
    + clonar():Recurso
    + aumentar()
}

class Lana extends Recurso {
    + clonar():Recurso
    + aumentar()
}

class Grano extends Recurso {
    + clonar():Recurso
    + aumentar()
}

class Mineral extends Recurso{
    + clonar():Recurso
   + aumentar()
}


Jugador ..> Inventario : <<use>>
Inventario "1" *-- "*" Recurso

@enduml